# CFD_Codes

./: .gitignore  README.md  __init__.py  plot_diffusivity.py  plot_eos.py  plot_navier_stokes.py
12_Steps/plots/: plot_navier_stokes.py
FV_Code/: CMakeLists.txt  Makefile
FV_Code/src/testing/vof/simulation/: DoubleMachSimulationTest.cpp  NohSimulationTest.cpp  ShockTubeSimulation_unittest.cpp
FV_Code/src/vof/: main.cpp
FV_Code/src/vof/controller/: Controller.cpp  Controller.h
FV_Code/src/vof/controller/problemInitialisers/: BaseInitialiser.cpp  BaseInitialiser.h  IBaseInitialiser.h
FV_Code/src/vof/io/: VTKWriter.cpp
advection/: __init__.py  advection_sim.py  flux_calculator.py
advection/examples/: sinusoid_example.py  smooth_peak.py  square_pulse.py
compressible_hydro/controller/: controller_1d.py
compressible_hydro/flux_calculator/: flux_calculator.py  riemann_solver.py
compressible_hydro/simulations/: shock_tube_sim_1d.py
mhd/: __init__.py
mhd/pysrc/applets/: ideal_field_solver.py  vector_ops.py
models/: navier_stokes_model.py
pic/: __init__.py  test_commit.py
pic/es1/: __init__.py  controller.py
pic/es1/field_solver/: __init__.py  field_solvers.py
pic/es1/particle_initialiser/: __init__.py  particle_initialisers.py
pic/es1/particle_pusher/: __init__.py  particle_pushers.py
pic/es1/simulations/: langmuir_oscillations.py
pic/pysrc/applets/: ideal_field_solver.py  vector_ops.py
pic/pysrc/e_field_solver/: e_field_solver.py
pic/pysrc/geometry/: vector_ops.py
pic/pysrc/particle_pusher/: boris_solver.py
pic/pysrc/simulations/: analytic_single_particle_motion.py
plots/: plot_functions.py  plot_navier_stokes.py  plot_turbulence.py  plot_viscosity.py
riemann_solvers/: __init__.py  analytic_shock_tube.py  controller.py  flux_calculator.py  riemann_solver.py  shock_tube_sim_1d.py  thermodynamic_state.py
riemann_solvers/boundary_conditions/: boundary_condition.py
riemann_solvers/eos/: thermodynamic_state.py
riemann_solvers/flux_calculator/: flux_calculator.py  flux_limiter.py  riemann_solver.py  van_der_corput.py
riemann_solvers/simulations/: analytic_shock_tube.py  base_simulation.py  double_mach.py  noh.py  random_fluid.py  shock_tube_sim_1d.py
shock_theory/: hugoniot_plotter.py
testing/mhd/applets/: ideal_field_solver.py  test_vector_ops.py
testing/pic/applets/: ideal_field_solver.py  test_vector_ops.py
testing/pic/pysrc/: analytic_single_particle_motion.py  test_vector_ops.py
testing/riemann_solvers/: riemann_solver_test.py  thermodynamic_state_test.py
wind_theory/src/bem/: Makefile  main.cpp
wind_theory/src/bem/interpolator/: AirfoilInterpolator.cpp
wind_theory/src/bem/solver/: BEMSolver.cpp  BEMSolver.h
wind_theory/src/bem/testing/interpolator/: AirfoilInterpolator_unittest.cpp
wind_theory/src/bem/testing/solver/: BEMSolver_unittest.cpp
